speed-up application startup by restoring DB from previously stored dump (currently only for H2 - just in case)